deploy/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jifelog-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jifelog-app
          resources:
            requests:
              cpu: '200m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
