deploy/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jifelog-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - jifelog.com
      secretName: tls-secret-prod
  rules:
    - host: jifelog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jifelog-app
                port:
                  number: 80
    - host: www.jifelog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jifelog-app
                port:
                  number: 80
